crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__multiple_atts.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<h a='b' c='d'>\"####)"
---
[
    Token {
        data: "h",
        attrs: Some(
            {
                "a": Some(
                    (
                        "b",
                        Single,
                    ),
                ),
                "c": Some(
                    (
                        "d",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
