crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__plaintext_element.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<plaintext>foobar\")"
---
[
    Token {
        data: "plaintext",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "foobar",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "plaintext",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
