crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__two_unclosed_start_tags.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r#\"<p>One<p>Two\"#)"
---
[
    Token {
        data: "p",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "One",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "p",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
    Token {
        data: "p",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "Two",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "p",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
